--- a/public/index.html
+++ b/public/index.html
@@ -14,78 +14,14 @@
       src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"
       data-auto-a11y="true">
     </script>
+    <link rel="manifest" href="/manifest.json">
     <title>
       Ajudante Gab
     </title>
   </head>
-  <body>
-    <!-- Navbar -->
-
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <!-- Container wrapper -->
-    <div class="container">
-      <!-- Navbar brand -->
-      <a class="navbar-brand me-1" href="#">
-        <img
-          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTMZ7F4jr-UBJd4btOXlLTlpl9ZHRxdqI6Ylk1bqHFHLXgmgYLRqxPFIfSErIEjqmZdZ6Y&usqp=CAU"
-          height="50"
-          alt=""
-          loading="lazy"
-          style="margin-top: -1px;"
-        />
-      </a>
-
-      <!-- Toggle button -->
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-mdb-toggle="collapse"
-        data-mdb-target="#navbarButtonsExample"
-        aria-controls="navbarButtonsExample"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <i class="fas fa-bars"></i>
-      </button>
-
-      <!-- Collapsible wrapper -->
-      <div class="collapse navbar-collapse" id="navbarButtonsExample">
-        <!-- Left links -->
-        <ul class="navbar-nav me-auto mb-4 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="#">GABI HELPER</a>
-          </li>
-        </ul>
-        <!-- Left links -->
-
-        <div class="d-flex align-items-center">
-          <button type="button" class="btn btn-primary me-1">
-          Conheça o projeto
-          </button>
-          <a
-            class="btn btn-dark px-1"
-            href="https://github.com/Chrzz-jpg/gabi-helper"
-            role="button"
-            ><i class="fab fa-github"></i
-          ></a>
-        </div>
-      </div>
-      <!-- Collapsible wrapper -->
-    </div>
-    <!-- Container wrapper -->
-  </nav>
-  <!-- Navbar -->
+  <body>  
 
     <!-- Content -->
-    <div id="root"></div>
-    
-
-    <!-- Footer 
-    <footer class="text-center text-sm-start bg-light text-muted fixed-bottom">
-      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
-        © 2021 Copyright:
-        <a class="text-reset fw-bold" href="https://mdbootstrap.com/">meu site</a>
-      </div>
-    </footer>-->
+    <div id="root"></div> 
   </body>
 </html>
